force-app/main/default/objects/SOX_Objects_Delete_Access__c/SOX_Objects_Delete_Access__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>SAL25-748 - Add validation check on opportunity to prevent delete</description>
    <label>SOX Objects Delete Access</label>
</CustomObject>