force-app/main/default/objects/SOX_Objects_Delete_Access__c/fields/Allow_Account_Delete__c.field-meta.xml
<CustomField>
    <fullName>Allow_Account_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAL25-780 - Add validation check on Account to prevent Delete</description>
    <inlineHelpText>If true allow account delete else prevent account delete</inlineHelpText>
    <label>Allow Account Delete</label>
    <type>Checkbox</type>
</CustomField>