force-app/main/default/objects/SOX_Objects_Delete_Access__c/fields/Allow_DDcase_delete__c.field-meta.xml
<CustomField>
    <fullName>Allow_DDcase_delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow DDcase delete</label>
    <type>Checkbox</type>
</CustomField>