force-app/main/default/objects/SOX_Objects_Delete_Access__c/fields/Allow_Opportunity_Delete__c.field-meta.xml
<CustomField>
    <fullName>Allow_Opportunity_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAL25-748 - Add validation check on opportunity to prevent delete</description>
    <inlineHelpText>If true allow opportunity delete else prevent opportunity delete</inlineHelpText>
    <label>Allow Opportunity Delete</label>
    <type>Checkbox</type>
</CustomField>